// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new/local/postgres/ErrorFilter should log error (matchers [false,false,false]) 1`] = `
Array [
  Array [
    "errorMatcher0",
    Array [
      "err",
      "e",
    ],
  ],
  Array [
    "errorMatcher1",
    Array [
      "err",
      "e",
    ],
  ],
  Array [
    "errorMatcher2",
    Array [
      "err",
      "e",
    ],
  ],
  Array [
    "monitor.error",
    Array [
      "err",
      "e",
    ],
  ],
]
`;

exports[`new/local/postgres/ErrorFilter should not log (matchers [false,true,false]) 1`] = `
Array [
  Array [
    "errorMatcher0",
    Array [
      "err",
      "e",
    ],
  ],
  Array [
    "errorMatcher1",
    Array [
      "err",
      "e",
    ],
  ],
]
`;

exports[`new/local/postgres/ErrorFilter should utilize the dependency APIs correctly 1`] = `
Object {
  "pg-monitor": "^1.2.2",
}
`;
